--- a/bankweb.css
+++ b/bankweb.css
@@ -459,7 +459,7 @@
   
   .dots__dot--active {
     /* background-color: #fff; */
-    background-color: #888;
+    background-color: rgb(143, 142, 142);
     opacity: 1;
   }
   
